# fileglancer-central

./: .gitignore  README.md  RELEASE.md  config.yaml.template  environment.yml  migrate.py  migrate_sqlite_to_postgresql.py  pyproject.toml
alembic/: env.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  env.template  nginx.conf
docker/html/: 404.html  50x.html  index.html
fileglancer_central/: app.py  database.py  issues.py  logger.py  model.py  scheduler.py  settings.py  usercontext.py  wiki.py
fileglancer_central/alembic/: env.py
tests/: test_database.py  test_endpoints.py
